Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106159

wasm: Image downloading anything external does not work even though the request succeeds in multithreaded apps

XMLWordPrintable

    • WebAssembly
    • 06f5c9ca60 (qt/qtbase/dev) 06f5c9ca60 (qt/tqtc-qtbase/dev)

      Downloading the same image through QNetworkAccessManager works fine, but Image in QML does not show the image and it is always stuck in Loading status.

      Seems to work fine in non-multithreaded builds.

        1. qtbug106159.zip
          14 kB
        2. image-2022-09-15-19-05-43-388.png
          image-2022-09-15-19-05-43-388.png
          122 kB
        3. tux.diff
          1 kB
        4. bettertux.diff
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mikolaj.boc Mikołaj Boc (Inactive)
            poikelin Joni Poikelin
            Votes:
            10 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes